app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asa-backend
  labels:
    app: asa-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: asa-backend
  template:
    metadata:
      labels:
        app: asa-backend
    spec:
      containers:
      - name: asa-backend
        image: primerin/asa:latest
        ports:
        - containerPort: 3010
---
apiVersion: v1
kind: Service
metadata:
  name: asa-backend-service
spec:
  selector:
    app: asa-backend-service
  type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 3010
      targetPort: 3010
      nodePort: 30000
