service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-service
spec:
  selector:
    app: asa-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: LoadBalancer
