rails-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-rails-app-ingress
spec:
  rules:
    - http:
      paths:
        - path: /
          backend:
            serviceName: asa_backend
            servicePort: 80
